--- a/main_new.css
+++ b/main_new.css
@@ -95,6 +95,16 @@ header{
 	height:30px;
 }
 
+#srch_icon{
+	background-image: url(https://ssl.gstatic.com/gb/images/v1_2e543709.png);
+	background-position: -69px -349px;
+	background-size: 112px 1828px;
+	display: inline-block;
+	width:30px;
+	height: 30px;
+	margin: -3px;
+}
+
 #user{
 	float: right;
 	min-width:270px;
@@ -366,7 +376,7 @@ header{
 	position:relative;
 	margin-left:255px;
 	margin-right:85px;
-	margin-bottom:5px;
+	margin-bottom:7px;
 	font-weight: 100;
 	font-size:28px;
 	overflow: hidden;
@@ -375,11 +385,12 @@ header{
 .section_subtitle{
 	font-size: 16px;
 	display: block;
+	margin-top: 2px;
 }
 
 a.more_button{
 	position:absolute;
-	left: 755px;
+	left: 764px;
 	bottom: 5px;
 	margin-top: 5px;
 	display:inline-block;
@@ -403,6 +414,7 @@ a.more_button:hover{
 }
 
 .books_container{
+	position:relative;
 	margin-left:255px;
 	margin-right: 50px;
 }
@@ -412,11 +424,23 @@ a.more_button:hover{
 	border-top-left-radius: 2px;
 }
 
+.books_hoover{
+	position: absolute;
+	top:4px;
+	width:160px;
+	height: 245px;
+	z-index:100;
+	border-radius: 2px; 
+}
+
+.books_hoover:hover{
+	background-color: rgba(51,51,51, 0.40);
+}
+
 .books_container ul li{
-	margin-right:10px;
 	width: 160px;
 	height: 330px;
-	margin: 5px 4px 5px 0px;
+	margin: 5px 6px 5px 0px;
 	background-color: rgb(255, 255, 255);
 	border-bottom-left-radius: 2px;
 	border-bottom-right-radius: 2px;
@@ -491,4 +515,8 @@ a.more_button:hover{
 	right:10px;
 	bottom:2px;
 	color: rgb(26, 161, 225);
+}
+
+.author:hover, .price:hover, .booktitle:hover{
+	text-decoration: underline;
 }
