--- a/FinalProject/main_m.css
+++ b/FinalProject/main_m.css
@@ -1,32 +1,25 @@
-html, body, div, ul, li, h1{
-	border: 0;
-	margin: 0;
-	padding: 0;
-}
+body,p,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,th,td,form,fieldset,legend,input,textarea,button,select{margin:0;padding:0}
+body,input,textarea,select,button,table,h1,h2,h3,h4,h5{font-family:HelveticaNeue-Light,AppleSDGothicNeo-Light,sans-serif;font-size:15px;line-height:1.267em}
+body{position:relative;background-color:#ececec;color:#000;-webkit-text-size-adjust:none}
+table{border-collapse:collapse}
+img,fieldset{border:0}
+ul,ol{list-style:none}
+em,address{font-style:normal}
+a{color:inherit;text-decoration:none}
+img{vertical-align:top}
 
 button{
 	background-color: #fff;
 	border:none;
 }
 
-ul{
-	list-style-type: none;
-}
-
 li{
 	display:inline-block;
-}
-
-a{
-	text-decoration: none;
-	color: #333;
-
 }
 
 body{
 	overflow:auto;
 	color: #333;
-	font-family: "Roboto",Arial,sans-serif;
 	font-size: 13px;
 	font-weight: 300;
 	line-height: 1.4;
@@ -35,7 +28,7 @@ body{
 
 header{
 	position:relative;
-	width:100%;
+	width:auto;
 	height: 48px;
 	background: #fff;
 	border-bottom: 1px solid #aaa;
@@ -91,6 +84,7 @@ header{
 }
 
 .section{
+	width:auto;
 	margin: 25px 0px 15px 0px;
 }
 
@@ -99,7 +93,7 @@ header{
 	width:100%;
 	line-height: 28px;
 	margin: 0;
-	min-width: 330px;
+	min-width: 320px;
 	min-height: 37px;
 	text-align: left;
 	vertical-align: middle;
@@ -107,7 +101,7 @@ header{
 
 .section_title{
 	padding-left:5px;
-	display: inline-block;
+	display: block;
 	font-size:24px;
 	font-weight: 100;
 }
@@ -138,12 +132,15 @@ a.more_button{
 	text-align: center;
 }
 
+.book_cards>ul{
+}
+
 .book_card{
 	position:relative;
 	display: inline-block;
-	width: 160px;
+	width: 150px;
 	height: 330px;
-	margin: 5px;
+	margin: 5px 3px 5px 3px;
 	vertical-align: top;
 	border-radius: 2px;
 	box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -162,7 +159,7 @@ a.more_button{
 .cover_container{
 	height: 245px;
 	line-height: 245px;
-	width: 160px;
+	width: 150px;
 	border-radius: 2px 2px 0 0;
 	background-color: #f5f5f5;
 	overflow: hidden;
@@ -177,11 +174,11 @@ a.more_button{
 
 .details{
 	position:relative;
-	width:140px;
-	height:75px;
+	width:130px;
+	height:65px;
 	border-bottom-right-radius: 2px;
 	border-bottom-left-radius: 2px;
-	padding: 5px 10px 5px 10px;
+	padding: 10px;
 }
 
 .booktitle{
@@ -190,14 +187,14 @@ a.more_button{
 	font-size: 16px;
 	line-height: 17px;
 	max-height: 17px;
-	max-width: 140px;
+	max-width: 130px;
 	overflow: hidden;
 	white-space: nowrap;
 }
 
 .paragraph_end{
 	position:absolute;
-	top:5px;
+	top:10px;
 	right:10px;
 	display:block;
 	width:60px;
@@ -207,7 +204,7 @@ a.more_button{
 
 .author, .price{
 	font-size: 13px;
-	max-width: 132px;
+	max-width: 130px;
 	max-height:16px;
 	overflow: hidden;
 	margin: 1px;
@@ -222,12 +219,13 @@ a.more_button{
 	position: absolute;
 	text-align: right;
 	right:10px;
-	bottom:2px;
+	bottom:9px;
 	color: rgb(26, 161, 225);
 }
 
 .footer-links{
-	padding: 15px;
+	padding: 10px;
+ 	padding-bottom:15px;
 }
 
 .copyright{
@@ -240,6 +238,8 @@ a.more_button{
 }
 
 footer{
+	padding:5px;
+	width:auto;
 	color: #555;
 	font-weight: 400;
 }
